--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "typescript": "^5.7.3"
   },
   "dependencies": {
@@ -20,6 +21,7 @@
     "@types/express": "^4.17.21",
     "@types/ip": "^1.1.3",
     "@types/jsonwebtoken": "^9.0.7",
+    "bcrypt": "^5.1.1",
     "bcrypt-ts": "^5.0.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
